--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,164 +9,30 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/bttn0"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="320dp"
-        android:backgroundTint="#171719"
-        android:text="0"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result" />
-
-    <Button
-        android:id="@+id/bttn1"
+        android:id="@+id/bttn_smena"
         android:layout_width="85dp"
         android:layout_height="90dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="388dp"
         android:backgroundTint="#171719"
-        android:text="1"
+        android:text="+/-"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="48sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result" />
 
     <Button
-        android:id="@+id/bttn_plus"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="284dp"
-        android:layout_marginTop="32dp"
-        android:backgroundTint="#919191"
-        android:text="+"
-        android:textAlignment="center"
-        android:textColor="#0b0b0b"
-        android:textSize="48sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result" />
-
-    <Button
-        android:id="@+id/bttn_del"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="284dp"
-        android:layout_marginTop="320dp"
-        android:backgroundTint="#919191"
-        android:text="/"
-        android:textAlignment="center"
-        android:textColor="#0b0b0b"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result" />
-
-    <Button
-        android:id="@+id/bttn_ravn"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="320dp"
-        android:backgroundTint="#16c603"
-        android:text="="
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result" />
-
-    <Button
-        android:id="@+id/bttn6"
+        android:id="@+id/bttn_comma"
         android:layout_width="85dp"
         android:layout_height="90dp"
         android:layout_marginStart="192dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="396dp"
         android:backgroundTint="#171719"
-        android:text="6"
+        android:text=","
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result" />
-
-    <Button
-        android:id="@+id/bttn2"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="32dp"
-        android:backgroundTint="#171719"
-        android:text="2"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result" />
-
-    <Button
-        android:id="@+id/bttn_minus"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="284dp"
-        android:layout_marginTop="128dp"
-        android:backgroundTint="#919191"
-        android:text="-"
-        android:textAlignment="center"
-        android:textColor="#0b0b0b"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result" />
-
-    <Button
-        android:id="@+id/bttn4"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="128dp"
-        android:backgroundTint="#171719"
-        android:text="4"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result" />
-
-    <Button
-        android:id="@+id/bttn9"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="192dp"
-        android:layout_marginTop="224dp"
-        android:backgroundTint="#171719"
-        android:text="9"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result" />
-
-    <Button
-        android:id="@+id/bttn_umn"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="284dp"
-        android:layout_marginTop="224dp"
-        android:backgroundTint="#919191"
-        android:text="*"
-        android:textAlignment="center"
-        android:textColor="#0b0b0b"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -181,19 +47,19 @@
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.16"
+        app:layout_constraintHorizontal_bias="0.155"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.174" />
+        app:layout_constraintVertical_bias="0.12" />
 
     <Button
-        android:id="@+id/bttn8"
+        android:id="@+id/bttn0"
         android:layout_width="85dp"
         android:layout_height="90dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="224dp"
+        android:layout_marginTop="396dp"
         android:backgroundTint="#171719"
-        android:text="8"
+        android:text="0"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
@@ -202,28 +68,28 @@
         app:layout_constraintTop_toBottomOf="@+id/result" />
 
     <Button
-        android:id="@+id/bttn7"
+        android:id="@+id/bttn5"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="204dp"
+        android:backgroundTint="#171719"
+        android:text="5"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn1"
         android:layout_width="85dp"
         android:layout_height="90dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="224dp"
+        android:layout_marginTop="300dp"
         android:backgroundTint="#171719"
-        android:text="7"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result" />
-
-    <Button
-        android:id="@+id/bttn_clear"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="192dp"
-        android:layout_marginTop="320dp"
-        android:backgroundTint="#2d2d2f"
-        android:text="C"
+        android:text="1"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
@@ -236,7 +102,7 @@
         android:layout_width="85dp"
         android:layout_height="90dp"
         android:layout_marginStart="192dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="300dp"
         android:backgroundTint="#171719"
         android:text="3"
         android:textColor="#FFFFFF"
@@ -246,15 +112,179 @@
         app:layout_constraintTop_toBottomOf="@+id/result" />
 
     <Button
-        android:id="@+id/bttn5"
+        android:id="@+id/bttn7"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="108dp"
+        android:backgroundTint="#171719"
+        android:text="7"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn9"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="192dp"
+        android:layout_marginTop="108dp"
+        android:backgroundTint="#171719"
+        android:text="9"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn2"
         android:layout_width="85dp"
         android:layout_height="90dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="300dp"
         android:backgroundTint="#171719"
-        android:text="5"
+        android:text="2"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn4"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="204dp"
+        android:backgroundTint="#171719"
+        android:text="4"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn8"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="108dp"
+        android:backgroundTint="#171719"
+        android:text="8"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn6"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="192dp"
+        android:layout_marginTop="204dp"
+        android:backgroundTint="#171719"
+        android:text="6"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn_clear"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="#2d2d2f"
+        android:text="C"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn_plus"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="284dp"
+        android:layout_marginTop="300dp"
+        android:backgroundTint="#919191"
+        android:text="+"
+        android:textAlignment="center"
+        android:textColor="#0b0b0b"
+        android:textSize="48sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn_umn"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="284dp"
+        android:layout_marginTop="108dp"
+        android:backgroundTint="#919191"
+        android:text="×"
+        android:textAlignment="center"
+        android:textColor="#0b0b0b"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn_ravn"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="284dp"
+        android:layout_marginTop="400dp"
+        android:backgroundTint="#16c603"
+        android:text="="
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn_minus"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="284dp"
+        android:layout_marginTop="204dp"
+        android:backgroundTint="#919191"
+        android:text="−"
+        android:textAlignment="center"
+        android:textColor="#0b0b0b"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/bttn_del"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="284dp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="#919191"
+        android:text="÷"
+        android:textAlignment="center"
+        android:textColor="#0b0b0b"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
