--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,21 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/bttn_tasks"
+        android:layout_width="345dp"
+        android:layout_height="76dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="96dp"
+        android:backgroundTint="#919191"
+        android:text="Задания"
+        android:textAlignment="center"
+        android:textColor="#0b0b0b"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bttn_telephony" />
+
+    <Button
         android:id="@+id/bttn_location"
         android:layout_width="345dp"
         android:layout_height="76dp"
