--- a/app/src/main/res/layout/activity_mediaplayer.xml
+++ b/app/src/main/res/layout/activity_mediaplayer.xml
@@ -10,7 +10,7 @@
     tools:context=".mediaplayer">
 
     <ListView
-        android:id="@+id/songsListView"
+        android:id="@+id/ListView"
         android:layout_width="384dp"
         android:layout_height="303dp"
         android:layout_margin="16dp"
@@ -93,7 +93,7 @@
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/songsListView" />
+        app:layout_constraintTop_toBottomOf="@+id/ListView" />
 
     <TextView
         android:id="@+id/currentTimeText"
